# devcontainer

./: Dockerfile  devcontainer.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
