[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = "Data Science Project"
authors = ["Your Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.0"
jupyter = "^1.0.0"
plotly = "^5.14.0"
statsmodels = "^0.14.0"
pyarrow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"